# formacao-python-backend

./: .flake8  .gitignore  README.md
01-ambiente-virtual/: main.py  pyproject.toml
02-bancos-de-dados/: main.py  meu_banco.db  sqlite.py
03-flask-dio-bank/: pyproject.toml
03-flask-dio-bank/src/: app.py
03-flask-dio-blog/: comandos.md  pyproject.toml
03-flask-dio-blog/src/: app.py  config.py  db.py  messages.py  utils.py
03-flask-dio-blog/src/controllers/: auth.py  post.py  user.py
03-flask-dio-blog/src/migrations/versions/: 041dc40238eb_base_inicial.py  d4fa8d8f5406_adicionado_tabela_role.py  d7b9641a72ad_adicionado_usuario_ativo.py
03-flask-dio-blog/src/models/: post.py  role.py  user.py
03-flask-dio-blog/tests/: test_utils.py
03-flask-dio-blog/tests/integration/: conftest.py
03-flask-dio-blog/tests/integration/controllers/: test_auth.py  test_post.py  test_user.py
